Added displaying notes, stored in file

--- a/TodoList/TodoListWpfApp/TodoListWpfApp.csproj
+++ b/TodoList/TodoListWpfApp/TodoListWpfApp.csproj
@@ -95,6 +95,12 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\CoreLogic\CoreLogic.csproj">
+      <Project>{D44B7652-31D1-42C9-89CB-BBE5E45441FE}</Project>
+      <Name>CoreLogic</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
